--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,6 +29,7 @@
     "@ckeditor/ckeditor5-typing": "^32.0.0",
     "@ckeditor/ckeditor5-upload": "^32.0.0",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.10",
     "next-images": "^1.8.4",
