--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-basic-styles": "^32.0.0",
     "@ckeditor/ckeditor5-block-quote": "^32.0.0",
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-code-block": "^32.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^32.0.0",
     "@ckeditor/ckeditor5-essentials": "^32.0.0",
     "@ckeditor/ckeditor5-font": "^32.0.0",
@@ -33,8 +34,12 @@
     "bootstrap": "^5.1.3",
     "next": "12.0.10",
     "next-images": "^1.8.4",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-select": "^5.2.2",
+    "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.3",
     "webpack": "^5.69.0"
   },
   "devDependencies": {
