--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -32,6 +32,7 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "http-server": "^14.1.0",
     "next": "12.0.10",
     "next-images": "^1.8.4",
     "nextjs-progressbar": "^0.0.14",
